PVR: add re-implemented pvrsrvinit and glue
HUGE thank you to @stargo for figuring this out.

Conflicts:
	device.mk
	rootdir/init.tuna.rc

Change-Id: I88c9c8f63a85b533bfbb459b2042aedda90ac0d8

--- a/rootdir/init.tuna.rc
+++ b/rootdir/init.tuna.rc
@@ -155,7 +155,7 @@ service fRom /system/bin/fRom \
 	class late_start
 	oneshot
 
-service pvrsrvinit /vendor/bin/pvrsrvinit
+service pvrsrvinit /system/bin/pvrsrvinit
     class core
     user root
     group root
