tuna: moved fRom to vendor/bin

--- a/rootdir/init.tuna.rc
+++ b/rootdir/init.tuna.rc
@@ -134,12 +134,13 @@ on property:persist.sys.tuna.off_mode=*
 on property:ril.modem.lte.powercontrol=*
 	write /sys/bus/usb/devices/1-1/power/control ${ril.modem.lte.powercontrol}
 
-service fRom /system/bin/fRom \
+service fRom /system/vendor/bin/fRom \
 	-x /data/misc/camera/R5_MVEN003_LD2_ND0_IR0_SH0_FL1_SVEN003_DCCID1044 \
 	-d /dev/mtd/mtd0
 	user media
 	group media
 	class late_start
+	seclabel u:r:fRom:s0
 	oneshot
 
 service pvrsrvinit /system/bin/pvrsrvinit
