--- a/rootdir/init.tuna.rc
+++ b/rootdir/init.tuna.rc
@@ -261,3 +261,7 @@ service battery_charger /sbin/healthd -c
 	class charger
 	critical
 	seclabel u:r:healthd:s0
+
+# Allow writing to the kernel trace log. Enabling tracing still requires root.
+on property:ro.debuggable=1
+	chmod 0222 /sys/kernel/debug/tracing/trace_marker
