changes for kernel 3.4

--- a/rootdir/init.tuna.rc
+++ b/rootdir/init.tuna.rc
@@ -20,6 +20,9 @@ on init
     mkdir /mnt/media_rw/usbdisk 0775 system system
     mkdir /storage/usbdisk 0000 system system
 
+    mkdir /factory 0775 radio radio
+    mount_all /fstab.tuna
+
     # KSM
     write /sys/kernel/mm/ksm/pages_to_scan 100
     write /sys/kernel/mm/ksm/sleep_millisecs 500
@@ -68,9 +71,9 @@ on boot
 on fs
     mkdir /factory 0775 radio radio
     mount_all /fstab.tuna
-    restorecon /dev/block/platform/omap/omap_hsmmc.0/by-name/radio
+    restorecon /dev/block/platform/omap_hsmmc.0/by-name/radio
     restorecon_recursive /factory
-    mount ext4 /dev/block/platform/omap/omap_hsmmc.0/by-name/efs /factory ro remount
+    mount ext4 /dev/block/platform/omap_hsmmc.0/by-name/efs /factory ro remount
     setprop ro.crypto.fuse_sdcard true
 
     # change permissions for mtd device
@@ -151,8 +154,8 @@ service pvrsrvinit /system/bin/pvrsrvinit
 
 # create filesystems if necessary
 service setup_fs /system/bin/setup_fs \
-        /dev/block/platform/omap/omap_hsmmc.0/by-name/cache \
-        /dev/block/platform/omap/omap_hsmmc.0/by-name/userdata
+        /dev/block/platform/omap_hsmmc.0/by-name/cache \
+        /dev/block/platform/omap_hsmmc.0/by-name/userdata
         class core
         user root
         group root
