init: disable tf_daemon and smc_pa_wvdrm services
These are not built since Android 4.1 by Google.
However, since switching to hardware/ti/omap4, they get built again, just to start and crash.

--- a/rootdir/init.tuna.rc
+++ b/rootdir/init.tuna.rc
@@ -152,6 +152,7 @@ service tf_daemon /system/bin/tf_daemon \
         class main
         user drmrpc
         group drmrpc
+        disabled
 
 service smc_pa_wvdrm /system/bin/smc_pa_ctrl \
         -c /vendor/etc/smc_normal_world_android_cfg.ini \
@@ -160,6 +161,7 @@ service smc_pa_wvdrm /system/bin/smc_pa_ctrl \
         user drmrpc
         group drmrpc
         oneshot
+        disabled
 
 service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /storage/usbdisk
     class late_start
